style.css
body{
    background-color:#CFEAFF;
}

#myself{
    font-style: italic;
    font-family: cursive ;
}

#contacts{
    vertical-align: 100%;
}

.pad{
    padding-top: 50px;
    padding-right: 30px;
    padding-bottom: 50px;
    padding-left: 80px;
  }

  .circular--square {
    border-top-left-radius: 50% 50%;
    border-top-right-radius: 50% 50%;
    border-bottom-right-radius: 50% 50%;
    border-bottom-left-radius: 50% 50%;
  }

